--- a/Frontend/web2-online-shop/public/index.html
+++ b/Frontend/web2-online-shop/public/index.html
@@ -29,6 +29,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+  <style>
+    /* Change the white to any color */
+  </style>
   <title>React App</title>
 </head>
 
